# critical_weight_analysis

./: .gitignore  GITIGNORE_GUIDE.md  INTEGRATION_GUIDE.md  LLAMA_RESEARCH_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  QUICK_RESEARCH_COMMANDS.md  README.md  README_ENHANCED.md  README_ESA_RUNBOOK.md  README_ESA_RUNBOOK_v2.md  RESEARCH_TESTING_GUIDE.md  STRUCTURE.md  ZIP_MANIFEST.md  baselines_config.yaml  current_environment.txt  esa_runner.py  implementation_summary.py  integration_validator.py  llama_research_runner.py  model_compatibility_tester.py  phase1_runner.py  phase1_runner_enhanced.py  pyproject.toml  requirements.txt  research_bridge.py  setup.sh  setup_llama.sh  test_integration.sh  test_metrics.py  validate_enhanced_features.py
.github/: copilot-instructions-backup.md  copilot_instructions_baseline.md
.restore/: restore_notes.md
deprecated/: llama_research.sh  test_models.sh
docs/: IMPLEMENTATION_COMPLETE.md  INDEX.md  LAMBDA_LABS_SETUP.md  MODEL_GUIDE.md  README.md  USAGE_EXAMPLES.md  VM_RESTORATION_CHECKLIST.md  esa_runner_usage_guide.md  fall_semester_workflow_guide.md  research_summary.md
docs/older/: INDEX.md  README_ORIGINAL_BACKUP.md  RESEARCH_TESTING_GUIDE.md
examples/: enhanced_workflows.py  run_enhanced_workflows.sh
exports/: comprehensive_results_summary.md  esa_updates_summary.md  export_summary.md  quantitative_summary.md
notebooks/: sensitivity_analysis_research.ipynb
outputs/: CommandsRun.md  baseline_execution_log_20250829_174130.md  baseline_execution_log_20250829_174741.md  baseline_execution_log_20250829_174952.md  baseline_execution_log_20250829_181344.md  baseline_report.md  baseline_report_20250829_174741.md  baseline_report_20250829_174952.md  baseline_report_20250829_181344.md
outputs/baselines/EleutherAI__pythia-1.4b/smoke/: manifest.json  results_summary.json
outputs/baselines/meta-llama__Llama-3.1-8B/smoke/: manifest.json  results_summary.json
outputs/baselines/microsoft__Phi-3-mini-4k-instruct/smoke/: manifest.json  results_summary.json
outputs/baselines/mistralai__Mistral-7B-v0.3/smoke/: manifest.json  results_summary.json
outputs/p1.1_baseline/llama31_8b/: config.json  experiment_manifest.json
outputs/p1.2_baseline/llama31_8b/gradxw_perlayer_k100/: config.json  experiment_manifest.json  sensitivity_stats.json  top_weights.csv
outputs/p1_baseline/llama31_8b/: perplexity_results.txt
outputs/p2/llama31_8b/gradsq_perlayer_k100/: config.json  experiment_manifest.json  sensitivity_stats.json  top_weights.csv
reports/: quantitative_results_20250901_191245.json  research_summary_20250901_191245.md
reports/old/: baseline_analysis_detailed.md  esa_runbook_alignment_summary.md  esa_runner_enhancement_summary.md  executive_summary.md
scripts/: baseline_runner.py  check_gpu.py  compute_overlap.py  generate_baseline_docs.py  generate_research_report.py  quick_test.py  run_baseline.py  run_perturb_eval.py  run_research_tests.sh  verify_restoration.py  vm_monitor.py
setup/: quick_vm_setup.sh  requirements.txt  setup.sh  setup_merged.sh
src/: __init__.py
src/analysis/: __init__.py  architecture_analyzer.py  temporal_stability.py  weight_analyzer.py
src/data/: dev_small.txt
src/eval/: downstream_tasks.py  perplexity.py
src/models/: loader.py
src/sensitivity/: __init__.py  advanced_perturb.py  metrics.py  perturb.py  rank.py
src/utils/: __init__.py  enhanced_visualize.py  manifest.py  visualize.py
test/: test_llama_access.py
tests/: run_tests.sh  test_integration.py
(+1 files in other folders)
